RESOLVED FIXED183886
Regression(r229828): WebKit.NoHistoryItemScrollToFragment API test is failing on iOS
https://bugs.webkit.org/show_bug.cgi?id=183886
Summary Regression(r229828): WebKit.NoHistoryItemScrollToFragment API test is failing...
Chris Dumez
Reported 2018-03-21 18:52:03 PDT
WebKit.NoHistoryItemScrollToFragment API test is failing on iOS since r229828.
Attachments
Patch (1.76 KB, patch)
2018-03-21 19:34 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-03-21 18:56:12 PDT
Looks like a timeout, on iOS only.
Chris Dumez
Comment 2 2018-03-21 19:34:35 PDT
Wenson Hsieh
Comment 3 2018-03-21 19:36:58 PDT
Comment on attachment 336256 [details] Patch r=mews
WebKit Commit Bot
Comment 4 2018-03-21 20:14:19 PDT
Comment on attachment 336256 [details] Patch Clearing flags on attachment: 336256 Committed r229843: <https://trac.webkit.org/changeset/229843>
WebKit Commit Bot
Comment 5 2018-03-21 20:14:20 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-03-21 20:15:20 PDT
mitz
Comment 7 2018-03-31 01:11:23 PDT
(In reply to WebKit Commit Bot from comment #4) > Comment on attachment 336256 [details] > Patch > > Clearing flags on attachment: 336256 > > Committed r229843: <https://trac.webkit.org/changeset/229843> I think this caused bug 184210.
Note You need to log in before you can comment on or make changes to this bug.