Regression(r229828): WebKit.NoHistoryItemScrollToFragment API test is failing on iOS https://bugs.webkit.org/show_bug.cgi?id=183886

Reviewed by Wenson Hsieh.

Since r229828, the FrameLoader needs to call FrameLoaderClient::didDecidePolicyForNavigationAction()
whenever a navigation policy decision is made. I added such a call r229828 to
FrameLoader::continueLoadAfterNavigationPolicy() but forgot to add one to
FrameLoader::continueFragmentScrollAfterNavigationPolicy(), which is the equivalent
for fragment navigations.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::continueFragmentScrollAfterNavigationPolicy):


Canonical link: https://commits.webkit.org/199482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229843 268f45cc-cd09-0410-ab3c-d52691b4dbfc